(fix) Picture frame aligns horizontally with the board above

--- a/app/assets/stylesheets/rate.sass.scss
+++ b/app/assets/stylesheets/rate.sass.scss
@@ -45,7 +45,7 @@
     background-size: contain;
     width: 100%;
     position: relative;
-    width: 490px;
+    width: 507px;
     z-index: 2;
     top: -5px;
 
